# pingcap_kvs

./: .gitignore  Cargo.toml  data  readme.md
idl/: kvs.thrift
src/: command.rs  core.rs  error.rs  kv.rs  kvs_error.rs  lib.rs  result.rs
src/kv/: codec.rs  command.rs  file_storage.rs
tests/: tests.rs
volo-gen/: volo.yml
