[package]
name = "kvs"
version = "0.1.0"
authors = ["Yanglong Yu <harpswordyyl@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
serde = "1.0.137"
serde_json = "1.0.81"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
