[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["yuyanglong"]
description = "kvs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.8", features=["derive"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

