[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["yuyanglong"]
description = "kvs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.8", features=["derive"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true

anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
tokio = "1"


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

